fix: floater on mobile and timer spacing

--- a/react-course/03-pizza-menu/src/components/Floater/Floater.css
+++ b/react-course/03-pizza-menu/src/components/Floater/Floater.css
@@ -90,6 +90,10 @@
   .sidebar.active .sidebar-content {
     width: 80vw;
   }
+
+  .sidebar p {
+    padding-right: 3em;
+  }
 }
 
 @keyframes glow {
