--- a/react-course/03-pizza-menu/src/components/Navbar/Navbar.css
+++ b/react-course/03-pizza-menu/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
 }
 
 #timerBox {
-  min-width: 100px;
+  min-width: 110px;
   height: 30px;
   position: relative;
   border-radius: 3em;
